--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-API_URL=http://localhost:3001
+API_URL=https://apirest-wayra.herokuapp.com
+NEXT_PUBLIC_API_URL = https://apirest-wayra.herokuapp.com
